--- a/index.html
+++ b/index.html
@@ -18,29 +18,29 @@ https://www.tooplate.com/view/2122-nano-folio
 -->
 </head>
 <nav style="margin-left: 50px;" class="navbar navbar-expand-lg navbar-light bg-light">
-	<a class="navbar-brand" href="#">Navbar</a>
+	<a class="navbar-brand" href="#">GSWarriors</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse" id="navbarNavDropdown">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
-				<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Features</a>
+				<a class="nav-link" href="#">Boutique</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Pricing</a>
+				<a class="nav-link" href="#">Panier</a>
 			</li>
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					Dropdown link
+					Voir nos offres
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-					<a class="dropdown-item" href="#">Action</a>
-					<a class="dropdown-item" href="#">Another action</a>
-					<a class="dropdown-item" href="#">Something else here</a>
+					<a class="dropdown-item" href="#">Maillot</a>
+					<a class="dropdown-item" href="#">Billeterie</a>
+					<a class="dropdown-item" href="#">Survêtements</a>
 				</div>
 			</li>
 		</ul>
