Changement contenu Footer, Navbar
CHangement Footer + ajout 2 boutons Navbar

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@ https://www.tooplate.com/view/2122-nano-folio
 			<li class="nav-item">
 				<a class="nav-link" href="#">Panier</a>
 			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Sponsors</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Contact</a>
+			</li>
 			</li>
 		</ul>
 	</div>
@@ -109,7 +115,7 @@ https://www.tooplate.com/view/2122-nano-folio
 		</section>
 
 		<footer class="tm-footer">
-			Copyright 2020 Nano Folio - Design: <a rel="sponsored" href="https://www.tooplate.com" class="tm-link-gray">Tooplate</a>
+			Copyright 2020 GS WARRIOR - Design: <a rel="sponsored" href="https://www.tooplate.com" class="tm-link-gray">Equipe ESGI</a>
 		</footer>
 	</div>
 
