--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@ https://www.tooplate.com/view/2122-nano-folio
 			</div>			
 		</div>
 
-		<section class="tm-contact tm-mb-50 tm-bgcolor-3 tm-border-rounded">
+		<div class="text-center">
+			<img src="img/floating.png" class="floating">
+		</div>
+
+		<section class="tm-contact tm-mb-50 tm-bgcolor-3 tm-border-rounded" style="margin-top: 50px;">
 			<div class="tm-contact-header tm-flex-center">
 				<i class="fas fa-map-pin fa-3x"></i>
 				<h2>Contact</h2>
