--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@ https://www.tooplate.com/view/2122-nano-folio
 	</div>
 </nav>
 <body>
+
+	<div style="margin-top: 40px;" class="container"> 
+		<div class="row text-center">
+			<div class="col">
+				<button type="button" class="btn btn-danger">Voir nos prochains match</button> 	
+			</div>	
+			<div class="col">
+				<button type="button" class="btn btn-warning">Voir nos résultats</button> 	
+			</div>
+		</div>
+	</div>
+
 	<div class="tm-container-fluid">
 		<section class="tm-site-header tm-flex-center tm-mb-50 tm-bgcolor-1 tm-border-rounded">
 			<img src="./img/golden-state-warriors-kepsar.png">
