--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ https://www.tooplate.com/view/2122-nano-folio
 				<h2>About Us</h2>
 			</div>
 			<div class="tm-about-text">
-				<p class="tm-mb-40">Nano Folio is simple HTML template with a minimal very light-weight custom CSS file. Max content width is 940 pixels. You can easily change the width or any part in this template. Gallery comes with a pop-up image and simple categories.</p>
-				<p class="tm-mb-0">Please support Tooplate website by telling your friends about it. That is going to be very helpful for us. Feel free to <a rel="nofollow" href="https://www.tooplate.com/contact" target="_blank">message us</a> via email or live chat if you have anything to say.</p>
+				<p class="tm-mb-40">Cette template a été modifié pour le TP de GitHub du Vendredi 5 Novembre 2021.</p>
+				<p class="tm-mb-0">Vous trouverez toutes nos modifications à travers nos différents commits sur GitHub :)</p>
 			</div>
 		</section>
 
@@ -109,9 +109,7 @@ https://www.tooplate.com/view/2122-nano-folio
 			</div>
 			<div class="tm-contact-info">
 				<address class="tm-mb-30">
-					120 Curabitur sed tortor ultrices,
-					congue odio eget, posuere urna.
-					Praesent at rhoncus 10680
+					53 Cr Albert Thomas, 69003 Lyon
 				</address>
 				<div class="tm-text-white tm-mb-40">Tel: <a href="tel:0100200340" class="tm-link-white">010-020-0340</a></div>
 				<div class="tm-flex">
