changement titre h1 about to a propos

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ https://www.tooplate.com/view/2122-nano-folio
 		<section class="tm-about tm-mb-80 tm-p-50 tm-bgcolor-2 tm-border-rounded">
 			<div class="tm-about-header tm-flex-center">
 				<i class="fas fa-users fa-2x"></i>
-				<h2>About Us</h2>
+				<h2>A propos</h2>
 			</div>
 			<div class="tm-about-text">
 				<p class="tm-mb-40">Cette template a été modifié pour le TP de GitHub du Vendredi 5 Novembre 2021.</p>
