changement about us

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ https://www.tooplate.com/view/2122-nano-folio
 			</div>
 			<div class="tm-about-text">
 				<p class="tm-mb-40">Cette template a été modifié pour le TP de GitHub du Vendredi 5 Novembre 2021.</p>
-				<p class="tm-mb-0">Vous trouverez toutes nos modifications à travers nos différents commits sur GitHub :)</p>
+				<p class="tm-mb-0">Vous trouverez toutes nos modifications à travers nos différents commits sur GitHub</p>
 			</div>
 		</section>
 
