--- a/index.html
+++ b/index.html
@@ -25,19 +25,16 @@ https://www.tooplate.com/view/2122-nano-folio
 	<div class="collapse navbar-collapse" id="navbarNavDropdown">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
-				<a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="#acceuil">Accueil <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Boutique</a>
+				<a class="nav-link" href="#joueur">Joueur</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Panier</a>
+				<a class="nav-link" href="#contact">Contact</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Sponsors</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">Contact</a>
+				<a class="nav-link" href="https://www.flashscore.fr/match/rP11GGao/#resume-du-match" target="_blank">Notre prochain match</a>
 			</li>
 			</li>
 		</ul>
@@ -48,7 +45,7 @@ https://www.tooplate.com/view/2122-nano-folio
 	<div style="margin-top: 40px;" class="container"> 
 		<div class="row text-center">
 			<div class="col">
-				<a href="https://www.flashscore.fr/equipe/golden-state-warriors/SxUtXqch/calendrier/" target="_blank" type="button" class="btn btn-danger">Voir nos prochains match</a> 	
+				<a href="https://www.flashscore.fr/equipe/golden-state-warriors/SxUtXqch/calendrier/" target="_blank" type="button" class="btn btn-danger">Voir notre calendrier</a>
 			</div>	
 			<div class="col">
 				<a href="https://www.flashscore.fr/equipe/golden-state-warriors/SxUtXqch/resultats/" target="_blank" type="button" class="btn btn-warning">Voir nos résultats</a> 
@@ -61,7 +58,7 @@ https://www.tooplate.com/view/2122-nano-folio
 			<img src="./img/golden-state-warriors-kepsar.png">
 		</section>
 
-		<section class="tm-about tm-mb-80 tm-p-50 tm-bgcolor-2 tm-border-rounded">
+		<section id="acceuil" class="tm-about tm-mb-80 tm-p-50 tm-bgcolor-2 tm-border-rounded">
 			<div class="tm-about-header tm-flex-center">
 				<i class="fas fa-users fa-2x"></i>
 				<h2>A propos</h2>
@@ -72,7 +69,7 @@ https://www.tooplate.com/view/2122-nano-folio
 			</div>
 		</section>
 
-		<div class="tm-gallery-section tm-mb-80">
+		<div id="joueur" class="tm-gallery-section tm-mb-80">
 			<div class="tm-gallery">				
 				<div class="tm-gallery-item city nature">
 		            <a href="img/img-01.jpg">
@@ -102,7 +99,7 @@ https://www.tooplate.com/view/2122-nano-folio
 			<img src="img/floating.png" class="floating">
 		</div>
 
-		<section class="tm-contact tm-mb-50 tm-bgcolor-3 tm-border-rounded" style="margin-top: 50px;">
+		<section id="contact" class="tm-contact tm-mb-50 tm-bgcolor-3 tm-border-rounded" style="margin-top: 50px;">
 			<div class="tm-contact-header tm-flex-center">
 				<i class="fas fa-map-pin fa-3x"></i>
 				<h2>Contact</h2>
