Changement couleurs a propos + ajout bouton a propos

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@ https://www.tooplate.com/view/2122-nano-folio
 				<p class="tm-mb-40">Cette template a été modifié pour le TP de GitHub du Vendredi 5 Novembre 2021.</p>
 				<p class="tm-mb-0">Vous trouverez toutes nos modifications à travers nos différents commits sur GitHub</p>
 			</div>
+			<div style="margin-top: 70px; margin-left: 70px;" class="col">
+				<a href="https://fr.wikipedia.org/wiki/Warriors_de_Golden_State" target="_blank" type="button" class="btn btn-warning">A propos de nous</a>
+			</div>
 		</section>
 
 		<div id="joueur" class="tm-gallery-section tm-mb-80">
@@ -126,7 +129,7 @@ https://www.tooplate.com/view/2122-nano-folio
 		</section>
 
 		<footer class="tm-footer">
-			Copyright 2020 GS WARRIOR - Design: <a rel="sponsored" href="https://www.tooplate.com" class="tm-link-gray">Equipe ESGI</a>
+			Copyright 2020 GS WARRIORS - Design: <a rel="sponsored" href="https://www.tooplate.com" class="tm-link-gray">Equipe ESGI</a>
 		</footer>
 	</div>
 
